# bf-multiraft

./: .gitignore  CONTRIBUTING.md  CONTRIBUTING.zh-CN.md  Cargo.toml  README.md  README.zh-CN.md  SECURITY.md  SECURITY.zh-CN.md  SUPPORT.md  SUPPORT.zh-CN.md
crates/multiraft-core/: Cargo.toml
crates/multiraft-core/src/: config.rs  error.rs  lib.rs  multiraft.rs  snapshot.rs  type_config.rs
crates/multiraft-demo/: Cargo.toml
crates/multiraft-demo/src/: main.rs
crates/multiraft-fsm/: Cargo.toml
crates/multiraft-fsm/src/: counter_fsm.rs  lib.rs
crates/multiraft-fsm/tests/: counter_fsm.rs
crates/multiraft-net/: Cargo.toml  build.rs
crates/multiraft-net/proto/: multiraft.proto
crates/multiraft-net/src/: api.rs  conn_metrics.rs  lib.rs  multiraft.rs  network.rs  node.rs  router.rs  snapshot_fetch.rs  standby_throttle.rs
crates/multiraft-net/src/grpc/: mod.rs  router.rs  server.rs
crates/multiraft-net/tests/: api_errors.rs  bench_ceiling.rs  bench_codec_micro.rs  chaos_failover.rs  chaos_standby.rs  grpc_cluster.rs  linearizability_porcupine.rs  linearizable_read.rs  not_leader.rs  restart_recover.rs  shared_connections.rs  standby_p2.rs  standby_p3.rs  standby_premium.rs  standby_snapshot.rs
crates/multiraft-store/: Cargo.toml
crates/multiraft-store/src/: lib.rs  log_file.rs  log_mem.rs  sm_bridge.rs  snapshot_catalog.rs  stub_network.rs
crates/multiraft-store/tests/: bench_file_log_micro.rs  file_log_roundtrip.rs  restart_recover.rs  single_node_write.rs
docs/: ARCHITECTURE.md  ARCHITECTURE.zh-CN.md  README.md  README.zh-CN.md  chaos-checklist.md  chaos-checklist.zh-CN.md  jepsen.md  jepsen.zh-CN.md  perf.md  perf.zh-CN.md  upstream.md  upstream.zh-CN.md
docs/plans/: 2026-07-18-multiraft-grpc.md  2026-07-18-multiraft-grpc.zh-CN.md  2026-07-18-multiraft.md  2026-07-18-multiraft.zh-CN.md
docs/specs/: 2026-07-18-multiraft-design.md  2026-07-18-multiraft-design.zh-CN.md  2026-07-20-aeron-standby-parity-design.md  2026-07-20-aeron-standby-parity-design.zh-CN.md  2026-07-20-standby-async-snapshot-design.md  2026-07-20-standby-async-snapshot-design.zh-CN.md
docs/wiki/: README.md
docs/wiki/en/: Architecture.md  Consistency.md  FAQ.md  Getting-Started.md  Home.md  Related-Projects.md  Roadmap.md
docs/wiki/zh/: Architecture.md  Consistency.md  FAQ.md  Getting-Started.md  Home.md  Related-Projects.md  Roadmap.md
jepsen/multiraft/: README.md  README.zh-CN.md  project.clj
jepsen/multiraft/src/jepsen/: multiraft.clj
jepsen/multiraft/src/jepsen/multiraft/: client.clj  nemesis.clj
jepsen/multiraft/test/jepsen/: multiraft_test.clj
scripts/: acceptance.sh  chaos.sh  run_demo_cluster.sh  run_jepsen.sh  sync_github_wiki.sh  test_all.sh
