[package]
name = "multiraft-demo"
version.workspace = true
edition.workspace = true

[[bin]]
name = "multiraft-demo"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
axum = "0.7"
clap = { version = "4", features = ["derive"] }
multiraft-core = { path = "../multiraft-core" }
multiraft-fsm = { path = "../multiraft-fsm" }
multiraft-net = { path = "../multiraft-net" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
