[package]
name = "multiraft-net"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
futures = { workspace = true }
multiraft-core = { path = "../multiraft-core" }
multiraft-fsm = { path = "../multiraft-fsm" }
multiraft-store = { path = "../multiraft-store" }
openraft = { workspace = true }
openraft-multi = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }

[build-dependencies]
protoc-bin-vendored = "3"
tonic-build = { workspace = true }

[dev-dependencies]
tempfile = "3"
tracing-subscriber = { workspace = true }
