[package]
name = "multiraft-net"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
futures = { workspace = true }
multiraft-core = { path = "../multiraft-core" }
multiraft-fsm = { path = "../multiraft-fsm" }
multiraft-store = { path = "../multiraft-store" }
openraft = { workspace = true }
openraft-multi = { workspace = true }
prost = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }

[build-dependencies]
protoc-bin-vendored = "3"
tonic-build = { workspace = true }

[dev-dependencies]
axum = "0.7"
bincode = { workspace = true }
porcupine-rs = "0.3"
sha2 = { workspace = true }
tempfile = "3"
tracing-subscriber = { workspace = true }
