[package]
name = "multiraft-store"
version.workspace = true
edition.workspace = true

[dependencies]
futures = { workspace = true }
multiraft-core = { path = "../multiraft-core" }
multiraft-fsm = { path = "../multiraft-fsm" }
openraft = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
tracing-subscriber = { workspace = true }
